--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,188 @@
-<p>orders works!</p>
+<div class="row align-items-center mb-4">
+  <div class="col-md-4">
+    <h2>Product List</h2>
+  </div>
+  <div class="col-md-4 text-center">
+    <!-- Empty space in the middle -->
+  </div>
+  <div class="col-md-4 d-flex justify-content-end">
+    <input type="search" class="form-control me-2" placeholder="Search" />
+    <button class="btn btn-success">Search</button>
+  </div>
+</div>
+<div class="container">
+  <table class="table table-striped table-hover">
+    <thead class="sticky-top">
+      <tr class="table-success">
+        <td>p_id</td>
+        <td>product name</td>
+        <td>address</td>
+        <td>payment type</td>
+        <td>date</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>cream</td>
+        <td>kp,53557,1 line weihds</td>
+        <td>cod</td>
+        <td>12-06-2024</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
