--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <nav class="nav flex-column">
       <a class="nav-link" routerLink="/products">Product List</a>
       <a class="nav-link" routerLink="/orders">Orders</a>
-      <a class="nav-link" routerLink="">Admin List</a>
+      <a class="nav-link" routerLink="/adminl">Admin List</a>
       <a class="nav-link" routerLink="">Users List</a>
       <a class="nav-link" routerLink="">Log Out</a>
     </nav>
@@ -36,7 +36,6 @@
     </div>
     <div class="content-1">
       <router-outlet></router-outlet>
-      <!-- <app-products></app-products> -->
     </div>
   </div>
 </div>
