--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,116 +1,35 @@
-.sidebar {
-  overflow: hidden;
-  background: linear-gradient(45deg, #343a40, #6c757d);
-  color: white;
+nav {
+  background: rgb(120, 120, 123);
+  height: 60px;
+}
+.navbar-light {
+  background-color: aliceblue !;
+}
+.container-1 {
+  background-image: url("/assets/landingbg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: 48pc;
   height: 100vh;
-  position: fixed;
-  width: 270px;
-  padding-left: 30px;
 }
-.navbar-brand {
-  color: #ff4d4d;
-  font-size: 1.5rem;
+.container-fluid {
+  margin-top: 3pc;
+  width: 100%;
+  height: 100%;
+  padding: 2em;
+  background-color: rgba(108, 158, 251, 0.5);
+}
+.text h3 {
+  margin-top: 5pc;
+  font-size: 3pc;
   font-weight: 600;
-  margin: 1em 0em;
+  margin-left: 5pc;
 }
-.profile {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 2em;
-  margin-top: 1em;
-}
-.name {
-  font-size: 1.5rem;
-  color: #fff;
-  margin-left: 0.5em;
-}
-.profile .box {
-  width: 5em;
-  height: 5em;
-  border-radius: 5em;
-  background-color: #ff4d4d;
-  border: 2px solid white;
-}
-.sidebar .nav-link {
-  font-size: 1.2em;
-  color: white;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  margin: 0.4em 0em;
-  padding-left: 50px;
-}
-.sidebar .nav-link:hover {
-  color: #343a40;
-  background-color: #fff;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-.content {
-  flex-grow: 1;
-  padding: 20px;
-  margin-left: 270px;
-  background-color: #f8f9fa;
-}
-.content .col {
-  display: flex;
-  justify-content: center;
-}
-.content .box {
-  overflow-x: hidden;
-  border-radius: 10px;
-  background-color: #ff914d;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 15em;
-  height: 9em;
-  border: 2px solid;
-  color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.box label {
-  color: #fff;
-  font-size: 20px;
-}
-.content-1 {
-  overflow-y: auto;
-  margin-top: 1em;
-  border-radius: 10px;
-  padding: 10px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-table thead {
-  font-size: 20px;
-  background-color: #ff914d;
-  color: white;
-}
-.bi-trash {
-  font-size: 20px;
-  color: red;
-}
-.bi-pen {
-  color: greenyellow;
-}
-input {
-  border-radius: 10px;
-  width: 15pc;
-  height: 2.5pc;
-}
-.btn {
-  padding: 0.3pc 1pc;
-  margin: 1pc;
-  background-color: #ff4d4d;
-  color: white;
-  border: none;
-  border-radius: 5px;
-}
-.btn:hover {
-  background-color: #e64444;
-}
-
-.content-1 {
-  overflow-x: hidden;
+.col .box {
+  margin-top: 5pc;
+  width: 25pc;
+  height: 24pc;
+  border: 3px solid;
+  background-color: aqua;
 }
