--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -16,173 +16,12 @@
       <tr class="table-success">
         <td>p_id</td>
         <td>product name</td>
+        <td>name</td>
         <td>address</td>
         <td>payment type</td>
         <td>date</td>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-    </tbody>
+    <tbody></tbody>
   </table>
 </div>
