--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,9 +2,7 @@
   <div class="col-md-4">
     <h2>Product List</h2>
   </div>
-  <div class="col-md-4 text-center">
-    <!-- Empty space in the middle -->
-  </div>
+  <div class="col-md-4 text-center d-flex"></div>
   <div class="col-md-4 d-flex justify-content-end">
     <input type="search" class="form-control me-2" placeholder="Search" />
     <button class="btn btn-success">Search</button>
@@ -15,174 +13,31 @@
   <table class="table table-striped table-hover">
     <thead class="sticky-top">
       <tr class="table-success">
-        <td>p_id</td>
-        <td>product name</td>
-        <td>address</td>
-        <td>payment type</td>
-        <td>date</td>
+        <td>P_id</td>
+        <td>Product name</td>
+        <td>Categeroy</td>
+        <td>Price</td>
+        <td>Product Details</td>
+        <td>Edit</td>
+        <td>Delete</td>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>cream</td>
-        <td>kp,53557,1 line weihds</td>
-        <td>cod</td>
-        <td>12-06-2024</td>
+      <tr *ngFor="let p of products">
+        <td>{{ p.productid }}</td>
+        <td>{{ p.pname }}</td>
+        <td>{{ p.catageroy }}</td>
+        <td>{{ p.price }}</td>
+        <td>{{ p.details }}</td>
+        <td>
+          <button class="btn btn-warning">Edit</button>
+        </td>
+
+        <td>
+          <button class="btn btn-danger" (click)="delete(p.productid)">
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
