--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluide" *ngIf="islogin">
+<!-- <div class="container-fluide" *ngIf="islogin">
   <div class="box">
     <div class="header text-center">Admin Login</div>
     <form (ngSubmit)="onsubmit()">
@@ -19,9 +19,10 @@
       <button class="btn btn-success" routerLink="/dashboard">Login</button>
     </form>
   </div>
-</div>
+  *ngIf="isdashboard"
+</div> -->
 
-<div class="d-flex" *ngIf="isdashboard">
+<div class="d-flex">
   <div class="sidebar d-flex flex-column">
     <a href="#" class="navbar-brand">Admin Dash board</a>
     <div class="profile">
@@ -32,8 +33,8 @@
       <a class="nav-link" routerLink="products">Product List</a>
       <a class="nav-link" routerLink="orders">Orders</a>
       <a class="nav-link" routerLink="adminl">Admin List</a>
-      <a class="nav-link" routerLink="">Users List</a>
-      <a class="nav-link" routerLink="login">Log Out</a>
+      <a class="nav-link" routerLink="users">Users List</a>
+      <a class="nav-link" (click)="islogout()">Log Out</a>
     </nav>
   </div>
   <div class="content">
