--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -22,8 +22,6 @@
         <td>date</td>
       </tr>
     </thead>
-    <tbody>
-      <tr *ngFor="let o of orders"></tr>
-    </tbody>
+    <tbody></tbody>
   </table>
 </div>
