--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,1 @@
-<link
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-  rel="stylesheet"
-/>
-
-<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/">
-      <h3>My <span>Profile</span>.</h3>
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/landing">login</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<div class="container-1">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12 col-6">
-        <div class="text">
-          <h3>
-            Naturally Radiant: <br />
-            transform your <br />
-            skin with organic <br />
-            care
-          </h3>
-        </div>
-      </div>
-
-      <div class="col-sm-12 col-6">
-        <div class="box"></div>
-      </div>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
