--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -14,3 +14,33 @@ h3 {
   font-weight: 600;
   margin-left: 2em;
 }
+
+.container-1 {
+  width: 60em;
+  margin-left: 7em;
+  margin-top: 3em;
+}
+.container-1 header {
+  font-size: 2rem;
+  font-weight: 600;
+  color: rgb(244, 65, 10);
+  margin-bottom: 1.5em;
+}
+.container-1 .form-control {
+  border-bottom: 3px solid rgb(135, 229, 236);
+}
+.container-1 #price {
+  margin-left: 0.6em;
+  margin-top: 2em;
+}
+.container-1 .btn-danger {
+  margin-top: 2em;
+  margin-left: 10em;
+  margin-bottom: 3em;
+  float: left;
+}
+.container-1 .btn-primary {
+  margin-top: 2em;
+  margin-right: 10em;
+  float: right;
+}
