--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,12 +51,20 @@
             skin with organic <br />
             care
           </h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
+            ducimus harum quaerat minima repudiandae recusandae ullam culpa
+            excepturi in repellendus consequuntur consequatur eum suscipit
+            numquam, exercitationem corporis necessitatibus obcaecati rerum?
+          </p>
         </div>
-      </div>
 
+        <button class="btn btn-primary">shop Now</button>
+      </div>
       <div class="col-12 col-lg-6">
         <div class="box"><div class="borde1"></div></div>
       </div>
     </div>
   </div>
 </div>
+<app-about></app-about>
